Keep data authorization boundaries explicit without slowing large rule sets
Separate tenant, domain and organization grants and denials around DataScope.
Treat every non-null user field, including an empty set, as an explicit
replacement for the corresponding effective-role configuration. Enforce the
platform-only cross-tenant boundary and evaluate decisive denials before
expensive allow expressions.

Reuse subtree paths within one evaluation, preserve isolation across roots
and requests, and include migration guidance and reproducible old/new
performance samples. Update obsolete menu and signature-request test APIs
so the complete regression suite runs against the current models.

Constraint: Only platform users may cross tenant boundaries
Rejected: Cross-request user authorization cache | invalidation cannot be guaranteed by this library
Confidence: high
Scope-risk: broad
Directive: Migrate legacy scope types and preserve null versus empty-set semantics in downstream adapters
Tested: Maven clean verify with 207 tests, zero failures/errors/skips; existing 50k-node performance limits; isolated old/new benchmark
Not-tested: Production database throughput, concurrent deployment traffic, downstream stored-policy migrations